openshift/frontend-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dev2-grants-frontend
  annotations:
    app.kubernetes.io/part-of: dev2-unity-applicant-portal
  labels:
    app.kubernetes.io/part-of: dev2-unity-applicant-portal
spec:
  selector:
    matchLabels:
      app: dev2-grants-frontend
  serviceName: dev2-grants-frontend
  replicas: 3
  template:
    metadata:
      labels:
        app: dev2-grants-frontend
    spec:
      automountServiceAccountToken: false
      containers:
        - name: grants-frontend
          image: image-registry.openshift-image-registry.svc:5000/d18498-dev/grants-applicant-portal-frontend
          ports:
            - containerPort: 4000
              name: http
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
