openshift/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dev2-grants-frontend
  labels:
    app.kubernetes.io/part-of: dev2-unity-applicant-portal
  annotations:
    app.kubernetes.io/part-of: dev2-unity-applicant-portal
spec:
  to:
    kind: Service
    name: dev2-grants-frontend
  port:
    targetPort: 4000
  tls:
    termination: edge
